--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"autoprefixer": "^10.4.22",
+		"postcss": "^8.5.6",
 		"svelte": "^5.43.8",
+		"tailwindcss": "^4.1.17",
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.17",
 		"apexcharts": "^5.3.6",
-		"svelte-apexcharts": "^1.0.2",
-		"tailwindcss": "^4.1.17"
+		"svelte-apexcharts": "^1.0.2"
 	}
 }
